--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "9.2.0-alpha01"
+agp = "9.2.0-alpha02"
 coreKtx = "1.10.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -8,13 +8,13 @@ kotlinxCoroutinesCore = "1.10.2"
 lifecycleRuntimeKtx = "2.6.1"
 lifecycleViewmodelCompose = "2.6.1"
 activityCompose = "1.8.0"
-kotlin = "2.0.21"
+kotlin = "2.2.10"
 composeBom = "2024.09.00"
 appcompat = "1.6.1"
 material = "1.10.0"
 kotlinxSerializationJson = "1.8.0"
 room = "2.7.0-alpha11"
-ksp = "2.0.21-1.0.28"
+ksp = "2.3.2"
 dokka = "2.1.0"
 
 [libraries]
